# C216-L1

001-intro/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
001-intro/inas_cli/: __init__.py  cli.py  main.py
001-intro/inas_cli/commands/: student.py  user.py
001-intro/inas_cli/domain/: enums.py  student.py
001-intro/inas_cli/repositories/: in_memory_student_repository.py  json_student_repository.py  student_repository.py
001-intro/inas_cli/services/: errors.py  student_service.py
001-intro/tests/: test_json_student_repository.py  test_student_service.py
003-api/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
003-api/app/: main.py
003-api/app/api/: router.py
003-api/app/api/v1/: health.py  microwaves.py
003-api/app/core/: config.py
003-api/app/middlewares/: __init__.py
003-api/app/schemas/: microwave.py
003-api/app/services/: microwaves.py
003-api/reports/: README.md  last-test-output.txt  last-test-report.md  last-test-results.xml
003-api/scripts/: run_tests_with_report.py
003-api/tests/: conftest.py  test_app.py  test_microwaves.py  test_openapi.py
004-crud-students/: .dockerignore  README.md  docker-compose.yml  pyproject.toml
004-crud-students/app/: main.py
004-crud-students/app/api/: router.py
004-crud-students/app/api/v1/: students.py
004-crud-students/app/core/: config.py
004-crud-students/app/middlewares/: process_time.py
004-crud-students/app/schemas/: student.py
004-crud-students/app/services/: students.py
004-crud-students/reports/: README.md  docker-compose-ps.txt  last-test-output.txt  last-test-report.md  last-test-results.xml
004-crud-students/scripts/: generate_result_images.py  run_tests_with_report.py
004-crud-students/tests/: conftest.py  test_app.py  test_health.py  test_openapi.py  test_students.py
