[project]
name = "inas-cli"
version = "0.1.0"
description = "CLI modular para ferramentario interno."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.24.1",
]

[project.scripts]
inas = "inas_cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["inas_cli*"]